k8s/dashboard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lumiscrape-dashboard
  namespace: minio
  labels:
    app: lumiscrape-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: lumiscrape-dashboard
