k8s/dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lumiscrape-dashboard-ingress
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
    - host: lumiscrape.aooba.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lumiscrape-dashboard
                port:
                  number: 8080
